--- a/similar-web-home-assignment-application/build.gradle
+++ b/similar-web-home-assignment-application/build.gradle
@@ -1,45 +1,22 @@
 plugins {
-    id 'java'
-    id 'com.gradle.build-scan' version '2.0.2'
-    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'org.springframework.boot' version '2.2.1.RELEASE'
 }
 
-allprojects {
-    
-    apply plugin: 'java'
-    apply plugin: 'io.spring.dependency-management'
-    apply plugin: 'java-library'
+dependencies {
 
-    repositories {
-        jcenter()
-    }
+    compile 'org.springframework.boot:spring-boot-starter-web'
 
-    dependencyManagement {
-        dependencies {
-            dependency 'org.springframework:spring-context:5.2.1.RELEASE'
-            dependency 'org.springframework:spring-beans:5.2.1.RELEASE'
-            dependency 'org.springframework:spring-web:5.2.1.RELEASE'
+    compile 'com.google.guava:guava'
 
-            dependency 'com.google.guava:guava:28.1-jre'
-            dependency 'com.fasterxml.jackson.core:jackson-annotations:2.10.0'
+    compileOnly 'org.projectlombok:lombok:1.18.10'
+    annotationProcessor 'org.projectlombok:lombok:1.18.10'
 
-            dependency 'org.springframework:spring-test:5.2.1.RELEASE'
-            dependency 'org.mockito:mockito-core:2.23.4'
-            dependency 'org.mockito:mockito-junit-jupiter:2.23.4'
-            dependency 'org.junit.jupiter:junit-jupiter-api:5.3.2'
-            dependency 'org.junit.jupiter:junit-jupiter-params:5.3.2'
-            dependency 'org.junit.jupiter:junit-jupiter-engine:5.3.2'
-            dependency 'org.junit.platform:junit-platform-engine:1.3.2'
-        }
-    }
-
-    test {
-        useJUnitPlatform()
-    }
-}
-
-buildScan {
-    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
-    termsOfServiceAgree = 'yes'
-    publishAlways()
+    testCompile 'org.springframework:spring-test'
+    testCompile 'org.mockito:mockito-core'
+    testCompile 'org.mockito:mockito-junit-jupiter'
+    testCompile 'org.junit.jupiter:junit-jupiter-api'
+    testCompile 'org.junit.jupiter:junit-jupiter-params'
+    testCompile 'org.junit.jupiter:junit-jupiter-engine'
+    testCompile 'org.junit.platform:junit-platform-engine'
+    testCompile 'org.hamcrest:hamcrest:2.1'
 }
